src/objects/WebService_Log__c.object
<CustomObject>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Direction of WebService call</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint called in case of Outbound</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Added filterable field to describe event name. Old one is only long text area so not useful.</description>
        <inlineHelpText>Field to describe event name.</inlineHelpText>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Details__c</fullName>
        <label>Extra Details</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to log record related to event that initiated the transaction.</description>
        <inlineHelpText>Reference to log record related to event that initiated the transaction.</inlineHelpText>
        <label>Parent Log</label>
        <referenceTo>WebService_Log__c</referenceTo>
        <relationshipLabel>WebService Logs</relationshipLabel>
        <relationshipName>WebService_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>Related id of salesforce record for which transaction occured. Eg. Account or Suscription.</description>
        <externalId>true</externalId>
        <inlineHelpText>Related id of salesforce record for which transaction occured. Eg. Account or Suscription.</inlineHelpText>
        <label>Related Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Content__c</fullName>
        <label>Response Content</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Number__c</fullName>
        <externalId>true</externalId>
        <label>TS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpgradeHistoryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link the webservice calls made during webpack upgrades to the the history object for those upgrades to enhance issue resolution</description>
        <label>Upgrade History Item</label>
        <referenceTo>Upgrade_History_Item__c</referenceTo>
        <relationshipLabel>WebService Logs</relationshipLabel>
        <relationshipName>WebService_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebService_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>time_taken__c</fullName>
        <formula>If(
ISNULL(Response_Time__c),
0,
Response_Time__c - Request_Time__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>time taken</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>WebService Log</label>
    <nameField>
        <displayFormat>WSL-{000000}</displayFormat>
        <label>WebService Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WebService Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>